styles/styles.css
:root {
  --header-height: 84px;
  --footer-height: 84px;
  --theme-grey-l: #999c9f;
  --theme-grey: #353a40;
  --theme-green-l: #96c93e;
  --theme-green-m: #29a744;
  --theme-yellow: #fdc005;
  --theme-blue-l: #16a1b8;
  --theme-blue-m: #1c5170;
  --theme-blue-d: #1b3542;
  --theme-red: #da3546;
}

* {
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif !important;
}

/* ---- GENERAL ---- */
body {
  background-image: url("../layout_reference.jpg");
  background-size: calc(100vw - 18px);
}

button {
  background-color: transparent;
  border-radius: 5px;
  border: 1px solid white;
  color: white;
  cursor: pointer;
  font-size: inherit;
  padding: 0.45rem 0.8rem;
  transition: 0.2s;
}

.anchor-btn {
  background-color: transparent;
  border-radius: 5px;
  border: 1px solid white;
  color: white;
  cursor: pointer;
  font-size: inherit;
  padding: 0.45rem 0.8rem;
  text-decoration: none;
  transition: 0.1s;
}
.anchor-btn:hover {
  background-color: rgba(255, 255, 255, 0.15);
  color: white;
}
.anchor-btn:active {
  background-color: white;
  color: var(--theme-grey);
}

.section-title {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 0.8rem;
  text-transform: uppercase;
}

.section-title span {
  font-size: 0.7rem;
}

.section-title h2 {
  font-size: 1.8rem;
  font-weight: bold;
  margin: 0;
}

/* ---- UTILITIES ---- */
.btn-green {
  background-color: var(--theme-green-m);
  border: 1px solid var(--theme-green-m);
}
.btn-green:hover {
  background-color: var(--theme-green-l);
  border: 1px solid var(--theme-green-l);
}

.badge-yellow {
  background-color: var(--theme-yellow);
  color: black;
}
.badge-blue {
  background-color: var(--theme-blue-l);
  color: white;
}
.badge-red {
  background-color: var(--theme-red);
  color: white;
}
.badge-grey {
  background-color: var(--theme-grey);
  color: white;
}

/* ---- HEADER ↓↓ ---- */
#main-header {
  align-items: center;
  background-color: #353a40;
  display: flex;
  height: var(--header-height);
  justify-content: space-between;
  padding: 0px 6.5rem 0 6rem; /* left padding adjusted to accomodate the logo */
  position: sticky;
  z-index: 3;
}

.header-links {
  color: white;
  cursor: pointer;
  font-size: 1rem;
  text-decoration: none;
}

#header-logo {
  align-items: center;
  color: white;
  display: flex;
  text-decoration: none;
}

#header-logo span {
  font-size: 1.3rem;
}

#header-logo img {
  height: 62px;
}

#header-navbar {
  display: flex;
  gap: 19px;
}

#header-navbar a {
  border-bottom: 2px solid transparent;
  color: var(--theme-grey-l);
  transition: 0.2s;
}
#header-navbar a:hover {
  color: white;
  border-bottom: 2px solid rgba(255, 255, 255, 0.75);
}

#header-navbar a:first-child {
  color: white;
}

#header-navbar a:last-child {
  color: var(--theme-green-m);
  font-weight: bold;
  transition: 0.2s;
}
#header-navbar a:last-child:hover {
  border-bottom: 2px solid var(--theme-green-l);
  color: var(--theme-green-l);
}

#header-dropdown {
  display: none;
}

#dropdown-button {
  background-color: var(--theme-grey);
  border: 1px solid rgba(255, 255, 255, 0.15);
  fill: white;
  height: 48px;
  padding: 0.5rem;
  position: relative;
  width: 48px;
}
#dropdown-button > #xmark-icon {
  bottom: 0;
  display: none;
  position: absolute;
  right: 9px;
  top: 5px;
  width: 60%;
}

#dropdown-button.show {
  background-color: rgba(255, 255, 255, 0.25);
}
#dropdown-button.show > #menu-icon {
  display: none;
}
#dropdown-button.show > #xmark-icon {
  display: block;
}

#dropdown-button:hover {
  background-color: rgba(255, 255, 255, 0.15);
}
#dropdown-button::after {
  display: none;
}

#dropdown-navbar {
  background-color: var(--theme-grey);
  border: 1px solid rgba(255, 255, 255, 0.15);
  width: 15rem;
}

#dropdown-navbar a:last-child {
  color: var(--theme-green-m);
  font-weight: bold;
}

.dropdown-item { /* overwrites the Bootstrap class */
  padding: 1rem;
}
.dropdown-item:hover { /* overwrites the Bootstrap class */
  background-color: rgba(255, 255, 255, 0.15);
  color: white;
}

/* ---- HEADER ↑↑ ---- */

/* ---- MAIN ↓↓ ---- */
/* -- HERO ↓↓ -- */
#hero-section {
  align-items: center;
  color: white;
  display: flex;
  flex-direction: row-reverse;
  height: calc(100vh - var(--header-height));
  overflow: hidden;
  padding: 0rem 7rem 0 6rem;
  position: relative;
}

#hero-section article {
  display: flex;
  flex-direction: column;
  line-height: 26px;
  padding-top: 5.5rem;
  text-align: right;
  max-width: 580px;
  z-index: 2;
}

#hero-section h2 {
  font-size: 2rem;
  font-weight: bold;
}

#hero-section nav {
  display: flex;
  gap: 1rem;
  justify-content: end;
}

#hero-carousel {
  align-items: center;
  background-color: var(--theme-blue-d);
  display: flex;
  filter: brightness(0.45);
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 1;
}
/* -- HERO ↑↑ -- */
/* -- ORADORES ↓↓ -- */
#cards-section {
  background-color: white;
  height: 100vh; /* cambiar para que se ajuste a contentido luego*/
}

#cards-container {
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr 1fr 1fr;
  padding: 0 12rem;
}

.card {
  background-color: transparent;
  border: none;
  max-width: 400px;
}

.card-image {
  background-color: var(--theme-blue-m);
  color: white;
}

.card-content {
  padding: 1.1rem;
}

.card-badge {
  border-radius: 3px;
  border: none;
  font-size: 0.6rem;
  font-weight: bold;
  padding: 3px 5px;
  text-align: center;
}

.card-name {
  font-size: 1.05rem;
  font-weight: bold;
  margin-top: 0.6rem;
}

.card-text {
  font-size: 0.75rem;
  line-height: 22px;
}
/* -- ORADORES ↑↑ -- */
/* -- DESTINO ↓↓ -- */
#destinos-section {
  background-color: var(--theme-grey);
  color: white;
  display: grid;
  font-size: 0.75rem;
  grid-template-columns: 1fr 1fr;
}

#destinos-section figure {
  margin: 0;
}

#destinos-section article {
  padding: 1.1rem 0.5rem;
}

#destinos-section h2 {
  font-size: 1.5rem;
  font-weight: bold;
}

#destinos-section p {
  line-height: 1.4rem;
  margin-bottom: 0.6rem;
}

#destinos-section .anchor-btn {
  padding: 0.2rem 0.4rem;
}

#destinos-section figure {
  padding-bottom: 55%; /* this set the carousel image ratio */
  position: relative;
}

#carousel-container {
  overflow: hidden;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
}
#carousel-container:hover .carousel-btn {
  display: block;
}
.carousel-btn {
  display: none;
}

.carousel-inner { /* overwrites Boostrap default configuration */
  align-items: end;
  display: flex;
}
.carousel-item.active { /* overwrites Boostrap default configuration */
  display: flex;
}

.destino-img {
  width: 100%;
}
/* -- DESTINO ↑↑ -- */
/* -- FORM ↓↓ -- */
#form-section {
  align-items: center;
  background-color: white;
  display: flex;
  flex-direction: column;
  padding: 0.5rem 3rem 2rem 3rem;
}

#form-section p {
  font-size: 0.85rem;
  margin-bottom: 0.5rem;
}

#form-container {
  display: flex;
  flex-direction: column;
  max-width: 660px;
  width: 100%;
}

#form-personal-input {
  display: flex;
  gap: 1.5rem;
  justify-content: space-between;
  margin-bottom: 1rem;
}

#form-personal-input label {
  width: 50%;
}

#form-container span {
  color: gray;
  font-size: 0.75rem;
}

input, textarea {
  border: 1px solid lightgray;
  border-radius: 4px;
  font-size: 0.8rem;
  padding: 3px 7px;
  width: 100%;
}

textarea {
  font-size: 1.1rem;
  padding: 8px 15px;
}

#btn-submit {
  background-color: var(--theme-green-l);
  border-radius: 4px;
  border: none;
  color: white;
  font-size: 1rem;
  margin-top: 1rem;
  padding: 0.5rem;
  transition: 0.2s;
}
#btn-submit:hover {
  background-color: var(--theme-green-m);
}
/* -- FORM ↑↑ -- */
/* ---- MAIN ↑↑ ---- */

/* ---- FOOTER ↓↓ ---- */
footer {
  background: rgb(27,53,66);
  background: linear-gradient(90deg, rgba(27,53,66,1) 0%, rgba(28,81,112,1) 100%); 
  min-height: var(--footer-height);
  height: auto;
}

#footer-nav {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 5rem;
  height: 100%;
  justify-content: center;
  min-height: var(--footer-height);
}

#footer-nav a {
  align-items: center;
  border-bottom: 2px solid transparent;
  color: white;
  display: flex;
  font-size: 0.84rem;
  height: inherit;
  justify-content: center;
  line-height: 1.4rem;
  max-width: 80px;
  padding: 0.2rem 0;
  text-align: center;
  text-decoration: none;
  transition: 0.15s;
  width: min-content;
}

#footer-nav a:hover {
  border-bottom: 2px solid rgba(255, 255, 255, 0.75);
}
/* ---- FOOTER ↑↑ ---- */

/* ---- MEDIA-QUERIES ↓↓ ---- */
@media (max-width: 1180px) {
  #header-navbar {
    display: none;
  }

  #header-dropdown {
    display: block;
  }
}

@media (max-width: 960px) {
  #destinos-section {
    grid-template-columns: 1fr;
  }
  #destinos-section figure {
    display: flex;
    max-height: 320px;
    overflow: hidden;
  }
  #destinos-section article {
    padding: 3rem;
  }
  #destinos-section p {
    margin-bottom: 1rem
  }
}

/* -- TABLET DISPLAY -- */
@media (max-width: 840px) { 
  #main-header {
    padding: 0 2.5rem 0 2rem;
  }

  #hero-section article {
    padding-top: 0;
  }

  #cards-section {
    height: auto;
  }
  #cards-container {
    grid-template-columns: 1fr 1fr;
    padding: 3rem;
  }

  .carousel-btn {
    display: block;
  }

  footer {
    height: auto;
    padding: 0 1rem;
  }
  #footer-nav {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
  }
}

/* -- SMART-PHONE DISPLAY -- */
@media (max-width: 420px) {
  #main-header {
    padding: 0 1.5rem 0 1rem;
  }
  #header-logo span {
    display: none;
  }

  #hero-section {
    padding: 0rem 2rem;
  }
  #hero-section article {
    padding-top: 0;
    text-align: left;
  }
  #hero-section nav {
    flex-direction: column;
    justify-content: start;
    width: fit-content;
  }

  #cards-container {
    grid-template-columns: 1fr;
    padding: 2rem;
  }

  #destinos-section article {
    padding: 2rem;
  }

  #form-section {
    padding: 0 2rem 2rem 2rem;
  }
  #form-personal-input {
    gap: 1rem;
    flex-direction: column;
  }
  #form-personal-input p {
    margin-bottom: 1rem;
  }
  #form-personal-input label {
    width: 100%;
  }
  input, textarea {
    padding: 5px 10px;
  }

  #footer-nav {
    height: auto;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}
/* ---- MEDIA-QUERIES ↑↑ ---- */

